# Public

./: .gitignore  CMakeLists.txt  README.md  generate_cbp.py  prep.py
prj/blackjack/: CMakeLists.txt  card.cpp  card.hpp  lucky_lady_score_keeper.cpp  lucky_lady_score_keeper.hpp  main.cpp  shoe.cpp  shoe.hpp  side_game_score_keeper.cpp  side_game_score_keeper.hpp  top_three_score_keeper.cpp  top_three_score_keeper.hpp
prj/bst/: CMakeLists.txt
prj/codekata/: CMakeLists.txt
prj/codekata/kata04/: CMakeLists.txt
prj/codekata/kata04/src/: kata04.cpp  kata04.hpp
prj/codekata/kata04/test/: main.cpp
prj/codekata/kata18/: CMakeLists.txt
prj/common/: CMakeLists.txt
prj/common/file-readers/: CMakeLists.txt
prj/common/file-readers/src/: csv_reader.cpp  csv_reader.hpp
prj/destiny/: CMakeLists.txt  base64.hpp  data_file_format.hpp  main.cpp
prj/euler/: CMakeLists.txt  main.cpp  p45.cpp  p45.hpp
prj/hello_world/: CMakeLists.txt  main.cpp
prj/singleton/: CMakeLists.txt  OtherClass.cpp  OtherClass.hpp  OtherCompilationUnit.cpp  OtherCompilationUnit.hpp  library_function.cpp  library_function.hpp  main.cpp  singleton.hpp
tools/: prep_vocore2_x64linux.py  prep_x64linux_x64linux.py
tools/toolchains/: toolchain-mips-linux-vocore2.cmake  toolchain-vocore-mips.cmake
